[package]
name = "sequoia-rfc2822"
description = "An RFC 2822 name-addr parser"
version = "0.9.0"
authors = [
    "Juga <juga@sequoia-pgp.org>",
    "Justus Winter <justus@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
build = "build.rs"
documentation = "https://docs.rs/sequoia-rfc2822"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "README.md"
license = "GPL-3.0"
keywords = ["rfc2822", "rfc822", "name-addr", "email"]
categories = ["email"]
edition = "2018"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[dependencies]
failure = "0.1.2"
lalrpop-util = "0.17"

[dev-dependencies]
lazy_static = "1.3"
quickcheck = "0.8"
rand = "0.6"

[build-dependencies]
lalrpop = "0.17"
