[package]
name = "sequoia-sq"
description = "Command-line frontends for Sequoia"
version = "0.22.0"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
build = "build.rs"
documentation = "https://docs.sequoia-pgp.org/0.21.0/sq"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "../README.md"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication", "command-line-utilities"]
license = "GPL-2.0-or-later"
edition = "2018"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[dependencies]
buffered-reader = { path = "../buffered-reader", version = "1.0.0", default-features = false }
sequoia-openpgp = { path = "../openpgp", version = "1.0.0", default-features = false }
sequoia-autocrypt = { path = "../autocrypt", version = "0.22", default-features = false }
sequoia-ipc = { path = "../ipc", version = "0.22", default-features = false }
sequoia-net = { path = "../net", version = "0.22", default-features = false }
anyhow = "1.0.18"
chrono = "0.4.10"
clap = "2.33"
itertools = "0.9"
tempfile = "3.1"
term_size = "0.3"
tokio = { version = "0.2.19", features = ["rt-core", "io-util", "io-driver"] }
rpassword = "5.0"

[build-dependencies]
clap = "2.33"

[dev-dependencies]
assert_cli = "0.6"
assert_cmd = "1.0.1"
predicates = "1.0.5"

[[bin]]
name = "sq"
path = "src/sq-usage.rs"

[features]
default = [
    "buffered-reader/compression",
    "sequoia-openpgp/default",
]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
compression = ["buffered-reader/compression", "sequoia-openpgp/compression"]
compression-deflate = ["buffered-reader/compression-deflate", "sequoia-openpgp/compression-deflate"]
compression-bzip2 = ["buffered-reader/compression-bzip2", "sequoia-openpgp/compression-bzip2"]
