[package]
name = "sequoia-sqv"
description = "A simple signature verification program"
version = "0.5.0"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
documentation = "https://docs.sequoia-pgp.org/0.5.0/sqv"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "README.md"
keywords = ["cryptography", "openpgp", "pgp", "signature", "verification"]
categories = ["cryptography", "command-line-utilities"]
license = "GPL-3.0"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[dependencies]
sequoia-openpgp = { path = "../openpgp", version = "0.5", default-features = false }
clap = "2.32.0"
failure = "0.1.2"
time = "0.1.38"

[build-dependencies]
clap = "2.27.1"

[dev-dependencies]
assert_cli = "0.6"

[[bin]]
name = "sqv"
path = "src/sqv-usage.rs"
