[package]
name = "sequoia-sqv"
description = "A simple OpenPGP signature verification program"
version = "0.19.0"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
documentation = "https://docs.sequoia-pgp.org/0.19.0/sqv"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "README.md"
keywords = ["cryptography", "openpgp", "pgp", "signature", "verification"]
categories = ["cryptography", "command-line-utilities"]
license = "GPL-2.0-or-later"
edition = "2018"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[dependencies]
sequoia-openpgp = { path = "../openpgp", version = "0.19", default-features = false }
anyhow = "1"
chrono = "0.4"
clap = "2.32.0"


[build-dependencies]
clap = "2.27.1"

[dev-dependencies]
assert_cli = "0.6"

[[bin]]
name = "sqv"
path = "src/sqv-usage.rs"

[features]
default = ["crypto-nettle"]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
compression = ["sequoia-openpgp/compression"]
compression-deflate = ["sequoia-openpgp/compression-deflate"]
compression-bzip2 = ["sequoia-openpgp/compression-bzip2"]
