[package]
name = "sequoia-store"
description = "Public-Key store for Sequoia"
version = "0.11.0"
authors = [
    "Juga <juga@sequoia-pgp.org>",
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
build = "build.rs"
documentation = "https://docs.sequoia-pgp.org/0.11.0/sequoia_store"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "../README.md"
keywords = ["cryptography", "openpgp", "pgp", "keyring"]
categories = ["cryptography", "authentication", "email"]
license = "GPL-3.0"
edition = "2018"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[features]
default = ["background-services"]
background-services = []

[dependencies]
sequoia-openpgp = { path = "../openpgp", version = "0.11" }
sequoia-core = { path = "../core", version = "0.11" }
sequoia-ipc = { path = "../ipc", version = "0.11" }
sequoia-net = { path = "../net", version = "0.11" }
capnp = "0.10"
capnp-rpc = "0.10"
failure = "0.1.2"
futures = "0.1.17"
rand = { version = "0.7", default-features = false }
rusqlite = "0.19"
time = "0.1.38"
tokio-core = "0.1.10"
tokio-io = "0.1.4"

[build-dependencies]
capnpc = "0.10"

[lib]
name = "sequoia_store"
path = "src/lib.rs"

[[bin]]
name = "sequoia-public-key-store"
path = "src/server.rs"
doc = false
required-features = ["background-services"]
