[package]
name = "sequoia-store"
description = "Public-Key store for Sequoia"
version = "0.22.0"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
build = "build.rs"
documentation = "https://docs.sequoia-pgp.org/0.21.0/sequoia_store"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "../README.md"
keywords = ["cryptography", "openpgp", "pgp", "keyring"]
categories = ["cryptography", "authentication", "email"]
license = "GPL-2.0-or-later"
edition = "2018"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[features]
default = ["background-services", "sequoia-openpgp/default"]
background-services = []

crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
compression = ["sequoia-openpgp/compression"]
compression-deflate = ["sequoia-openpgp/compression-deflate"]
compression-bzip2 = ["sequoia-openpgp/compression-bzip2"]

[dependencies]
sequoia-openpgp = { path = "../openpgp", version = "1.0.0", default-features = false }
sequoia-core = { path = "../core", version = "0.22" }
sequoia-ipc = { path = "../ipc", version = "0.22", default-features = false }
sequoia-net = { path = "../net", version = "0.23", default-features = false }
anyhow = "1.0.18"
capnp = "0.13"
capnp-rpc = "0.13"
futures-util = "0.3.5"
rand = { version = "0.7", default-features = false }
rusqlite = "0.24"
thiserror = "1.0.2"
tokio = { version = "0.2.19", features = ["rt-core", "tcp", "io-driver", "time"] }
tokio-util = { version = "0.3", features = ["compat"] }

[target.'cfg(target_os="android")'.dependencies.rusqlite]
version = "0.24.0"
features = ["bundled"]

[build-dependencies]
capnpc = "0.13"

[lib]
name = "sequoia_store"
path = "src/lib.rs"

[[bin]]
name = "sequoia-public-key-store"
path = "src/server.rs"
doc = false
required-features = ["background-services"]
