[package]
name = "sequoia-tool"
description = "Command-line frontends for Sequoia"
version = "0.19.0"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
build = "build.rs"
documentation = "https://docs.sequoia-pgp.org/0.19.0/sq"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "../README.md"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication", "command-line-utilities"]
license = "GPL-2.0-or-later"
edition = "2018"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[dependencies]
buffered-reader = { path = "../buffered-reader", version = "0.18", default-features = false }
sequoia-openpgp = { path = "../openpgp", version = "0.19", default-features = false }
sequoia-autocrypt = { path = "../autocrypt", version = "0.19", default-features = false }
sequoia-core = { path = "../core", version = "0.19", default-features = false }
sequoia-ipc = { path = "../ipc", version = "0.19", default-features = false }
sequoia-net = { path = "../net", version = "0.19", default-features = false }
sequoia-store = { path = "../store", version = "0.19", default-features = false }
anyhow = "1"
chrono = "0.4"
clap = "2.32.0"
itertools = "0.9"
prettytable-rs = "0.8.0"
tempfile = "3.0.4"
crossterm = "0.13"
tokio-core = "0.1"
rpassword = "5.0"

[build-dependencies]
clap = "2.32.0"

[dev-dependencies]
assert_cli = "0.6"

[[bin]]
name = "sq"
path = "src/sq-usage.rs"

[features]
default = [
    "buffered-reader/compression",
    "sequoia-openpgp/default",
    "sequoia-store/background-services"
]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
compression = ["buffered-reader/compression", "sequoia-openpgp/compression"]
compression-deflate = ["buffered-reader/compression-deflate", "sequoia-openpgp/compression-deflate"]
compression-bzip2 = ["buffered-reader/compression-bzip2", "sequoia-openpgp/compression-bzip2"]
